# backtesting-engine

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: fetcher.py
examples/: benchmark_event_loop.py  generate_report.py  run_strategies.py
examples/output/: results.json
src/: backtest_engine.py  data_handler.py  events.py  execution_handler.py  performance.py  portfolio.py
strategies/: base.py  mean_reversion.py  momentum.py  pairs_trading.py
tests/: test_backtest_engine.py  test_data_handler.py  test_events.py  test_execution_handler.py  test_fetcher.py  test_performance.py  test_portfolio.py  test_strategies.py  test_walk_forward.py
