[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backtesting-engine"
version = "0.1.0"
description = "Event-driven backtesting framework"
requires-python = ">=3.11"
dependencies = [
    "pandas==2.2.3",
    "numpy==2.1.3",
    "yfinance==0.2.49",
    "statsmodels==0.14.4",
    "scipy==1.14.1",
    "quantstats==0.0.62",
    "matplotlib==3.9.2",
    "seaborn==0.13.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["src", "strategies", "data"]
omit = ["tests/*", "examples/*"]
